source/metacall/include/metacall/metacall.h

struct metacall_version_type
{
	unsigned int major;
	unsigned int minor;
	unsigned int patch;
	const char *revision;
	const char *str;
	const char *name;
};
/**
*  @brief
*    Provide the module version struct
*
*  @return
*    Static struct containing unpacked version
*/
METACALL_API const struct metacall_version_type *metacall_version(void);
/**
*  @brief
*    Provide the module version hexadecimal value
*    with format 0xMMIIPPPP where M is @major,
*    I is @minor and P is @patch
*
*  @param[in] major
*    Unsigned integer representing major version
*
*  @param[in] minor
*    Unsigned integer representing minor version
*
*  @param[in] patch
*    Unsigned integer representing patch version
*
*  @return
*    Hexadecimal integer containing packed version
*/
METACALL_API uint32_t metacall_version_hex_make(unsigned int major, unsigned int minor, unsigned int patch);
/**
*  @brief
*    Provide the module version hexadecimal value
*    with format 0xMMIIPPPP where M is major,
*    I is minor and P is patch
*
*  @return
*    Hexadecimal integer containing packed version
*/
METACALL_API uint32_t metacall_version_hex(void);
/**
*  @brief
*    Provide the module version string
*
*  @return
*    Static string containing module version
*/
METACALL_API const char *metacall_version_str(void);
/**
*  @brief
*    Provide the module version revision string
*
*  @return
*    Static string containing module version revision
*/
METACALL_API const char *metacall_version_revision(void);
/**
*  @brief
*    Provide the module version name
*
*  @return
*    Static string containing module version name
*/
METACALL_API const char *metacall_version_name(void);
/**
*  @brief
*    Provide the module information
*
*  @return
*    Static string containing module information
*/
METACALL_API const char *metacall_print_info(void);